Add nintendo switch console. And prepare for a world where every config lives here in the backend service.